# mcp-servers-playground

./: .gitignore  README.md  pyproject.toml
01-weather/: server.py
02-localnotes/: notes.txt
03-screenshot/: server.py
04-crypto/: server.py
05-websearch/: server.py
06-structured-inputs/: server.py
deployment_09/: __main__.py  server.py
localnotes_02/: server.py
mcp_client_11/: client.py  server.py
mcp_host_12/: agent.py
mcp_query_12/: mcp_query.py
projects/01-memory-mcp/memory_mcp/: config.py  prompts.py  server.py  storage.py  tools.py
prompts_07/: server.py
resources_08/: server.py
streamable_http_10/: server.py
weather_01/: client.py
