[project]
name = "mcp-servers-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.2",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#creating-executable-scripts
[project.scripts]
mcp-server = "deployment_09.__main__:main"

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#declaring-the-build-backend
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/1.9/build/
[tool.hatch.build.targets.wheel]
packages = ["deployment_09"]